--- a/compose.yml
+++ b/compose.yml
@@ -9,3 +9,6 @@ services:
       - ./src:/app
     ports:
       - "8080:80"
+    environment:
+      - SECRET_KEY=09d25e094faa6ca2556c818166b7a9563b93f7099f6f0f4caa6cf63b88e8d3e7
+      - ALGORITHM=HS256
