--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+sqlalchemy = "==1.4.45"
+fastapi = "==0.88.0"
+httpx = "==0.23.1"
+ecdsa = "==0.18.0"
+sqlalchemy-utils = "*"
+pytest-asyncio = "*"
+aiosqlite = "*"
 
 [dev-packages]
 flake8 = "*"
