トークン取得もテスト追加

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ ecdsa = "==0.18.0"
 sqlalchemy-utils = "*"
 pytest-asyncio = "*"
 aiosqlite = "*"
+bcrypt = "==4.0.1"
 
 [dev-packages]
 flake8 = "*"
