CSVアップロードのテストを追加

--- a/Pipfile
+++ b/Pipfile
@@ -26,3 +26,6 @@ pytest-html = "*"
 [requires]
 python_version = "3.9"
 python_full_version = "3.9.6"
+
+[scripts]
+test = "pytest src/tests --junit-xml artifacts/results/pytest.xml"
